--- a/Conversao_celsius/.project
+++ b/Conversao_celsius/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Conversao_poo</name>
+	<name>Conversao_celsius</name>
 	<comment></comment>
 	<projects>
 	</projects>
